--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -15,6 +15,8 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/bazel",
     visibility = ["//visibility:public"],
     deps = [
+        # keep
+        "//enkit/proto:enkit_proto_go_proto",
         "//lib/bazel/proto:go_protos",
         "//lib/goroutine",
         "//lib/logger",
