ENGPROD-1379: Remote asset downloader service, based on `bazel-remote` and compatible with BuildBarn (#1262)
A very tiny stateless proxy service with main purpose to replace
`Download Repository Cache` step in presubmits (currently taking up to
10 minutes of heavy IO every time and heavyweight repository cache
preparation regular job).
This service implements [Remote Asset
Protocol](https://github.com/bazelbuild/remote-apis/blob/main/build/bazel/remote/asset/v1/remote_asset.proto)
to fetch external dependencies and place them into cache.
[bazel-remote](https://github.com/buchgr/bazel-remote) and
[bb-remote-asset](https://github.com/buildbarn/bb-remote-asset)
considered, but contains some inefficiencies.
For example, there is no way to make `bazel-remote` stateless, but I
reused its codebase here.
More info in the [design
doc](https://docs.google.com/document/d/1l4lJwOgW1Evdc_aalsIGGeRPpm3fhn0I3cpMRZreymk/edit?tab=t.0#heading=h.i8mhtcz6pa0u).

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -52,12 +52,14 @@ gazelle(name = "gazelle_update_repos")
 #
 # gazelle:resolve go kythe.io/kythe/go/platform/delimited @io_kythe//kythe/go/platform/delimited
 # gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto
+# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/asset/v1 @com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto
 
 # Buildbarn gazelle resolve mappings
 # Buildbarn dependencies may need certain overrides; these mappings are copied
 # from BUILD.bazel in github.com/buildbarn/bb-remote-execution so that libraries
 # from that repo can build.
 
+# gazelle:go_grpc_compilers	@rules_go//proto:go_grpc
 # gazelle:resolve proto pkg/proto/configuration/cloud/aws/aws.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/cloud/aws:aws_proto
 # gazelle:resolve proto go pkg/proto/configuration/cloud/aws/aws.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/cloud/aws
 # gazelle:resolve proto proto google/rpc/code.proto @googleapis//google/rpc:code_proto
