--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -94,20 +94,21 @@ pip.parse(
 use_repo(pip, "enkit_pip_deps")
 
 bazel_dep(name = "aspect_rules_py", version = "1.6.1")
-
 bazel_dep(name = "protobuf", version = "enf-31.0")
 bazel_dep(name = "googleapis-cc", version = "1.0.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
-bazel_dep(name = "rules_go", version = "0.55.1")
-bazel_dep(name = "gazelle", version = "enf-0.44.0")
+bazel_dep(name = "rules_go", version = "0.57.0")
+bazel_dep(name = "gazelle", version = "enf-0.45.0")
+bazel_dep(name = "aspect_rules_js", version = "2.5.0")
+bazel_dep(name = "opentelemetry-proto", version = "1.7.0")
 
 go_sdk = use_extension(
     "@rules_go//go:extensions.bzl",
     "go_sdk",
     dev_dependency = True,
 )
-go_sdk.download(version = "1.24.4")
+go_sdk.download(version = "1.24.6")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
@@ -139,6 +140,7 @@ use_repo(
     "com_github_itchyny_gojq",
     "com_github_jackc_pgx_v5",
     "com_github_jackpal_gateway",
+    "com_github_joho_godotenv",
     "com_github_josephburnett_jd",
     "com_github_kataras_muxie",
     "com_github_kirsle_configdir",
@@ -174,12 +176,15 @@ use_repo(
     "org_golang_google_api",
     "org_golang_google_genproto",
     "org_golang_google_genproto_googleapis_bytestream",
+    "org_golang_google_genproto_googleapis_rpc",
     "org_golang_google_grpc",
+    "org_golang_google_grpc_security_advancedtls",
     "org_golang_google_protobuf",
     "org_golang_x_crypto",
     "org_golang_x_exp",
     "org_golang_x_net",
     "org_golang_x_oauth2",
+    "org_golang_x_sync",
     "org_golang_x_term",
     "org_uber_go_goleak",
     "org_uber_go_zap",
@@ -192,12 +197,23 @@ inject_repo(
     go_deps,
     bazel_remote_apis = "com_github_bazelbuild_remote_apis",
     dev_cel_expr = "cel-spec",
-    googleapis = "googleapis",
-    grpc = "grpc",
-    jsonnet_go = "jsonnet_go",
-    protobuf = "protobuf",
-    rules_go = "rules_go",
-    xds = "xds",
+)
+
+inject_repo(
+    go_deps,
+    "rules_oci",
+    "rules_pkg",
+    "rules_go",
+    "gazelle",
+    "rules_jsonnet",
+    "googleapis",
+    "grpc",
+    "jsonnet_go",
+    "protobuf",
+    "xds",
+    "opentelemetry-proto",
+    "aspect_rules_js",
+    "aspect_bazel_lib",
 )
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
