--- a/auth/proto/BUILD.bazel
+++ b/auth/proto/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_go//go:def.bzl", "go_library")
 load("@rules_go//proto:def.bzl", "go_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
@@ -12,5 +13,12 @@ go_proto_library(
     compilers = ["@rules_go//proto:go_grpc"],
     importpath = "github.com/enfabrica/enkit/auth/proto",
     proto = ":auth_proto",
+    visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "proto",
+    embed = [":go_default_library"],
+    importpath = "github.com/enfabrica/enkit/auth/proto",
     visibility = ["//visibility:public"],
 )
