--- a/lib/bazel/commands/BUILD.bazel
+++ b/lib/bazel/commands/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/bazel/commands",
     visibility = ["//visibility:public"],
     deps = [
+        # keep
         "//enkit/proto:enkit_proto_go_proto",
         "//lib/bazel",
         "//lib/bes",
